--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.8.0",
     "@turf/turf": "^6.5.0",
+    "dotenv": "^16.0.3",
+    "gapi-script": "^1.2.0",
     "mapbox-gl": "^2.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
