--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.8.0",
     "@turf/turf": "^6.5.0",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "gapi-script": "^1.2.0",
     "mapbox-gl": "^2.9.2",
