--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-scripts": "^4.0.3",
-    "react-select": "^5.7.0"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
