--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Django==4.1
-numpy==1.23.5
-requests==2.28.1
+Django==4.1.7
+numpy==1.24.2
+PyYAML==6.0
+requests==2.28.2
 scikit_learn==1.2.2
+scipy==1.10.1
+tqdm==4.65.0
 xgboost==1.7.4
